[gd_scene load_steps=18 format=2]

[ext_resource path="res://fonts/PixelFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/StartScreen.gd" type="Script" id=2]
[ext_resource path="res://scripts/DifficultyMenu.gd" type="Script" id=3]
[ext_resource path="res://scripts/Menus.gd" type="Script" id=4]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Menus" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="MainMenu" type="Node2D" parent="Menus"]
script = ExtResource( 5 )

[node name="Score" type="VBoxContainer" parent="Menus/MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_right = 480.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenteredScore" type="CenterContainer" parent="Menus/MainMenu/Score"]
margin_right = 480.0
margin_bottom = 44.0

[node name="ScoreLabel" type="Label" parent="Menus/MainMenu/Score/CenteredScore"]
margin_left = 225.0
margin_right = 255.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="Menus/MainMenu"]
margin_left = 50.0
margin_top = 149.0
margin_right = 429.0
margin_bottom = 571.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenteredTitle" type="CenterContainer" parent="Menus/MainMenu/MainContainer"]
margin_right = 379.0
margin_bottom = 38.0

[node name="Title" type="Label" parent="Menus/MainMenu/MainContainer/CenteredTitle"]
margin_right = 379.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Dodge the creeps"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TweenTitle" type="Tween" parent="Menus/MainMenu/MainContainer/CenteredTitle"]

[node name="CenteredButtons" type="CenterContainer" parent="Menus/MainMenu/MainContainer"]
margin_top = 138.0
margin_right = 379.0
margin_bottom = 326.0

[node name="Lines" type="VBoxContainer" parent="Menus/MainMenu/MainContainer/CenteredButtons"]
margin_left = 106.0
margin_right = 272.0
margin_bottom = 188.0
custom_constants/separation = 40

[node name="CenteredStart" type="CenterContainer" parent="Menus/MainMenu/MainContainer/CenteredButtons/Lines"]
margin_right = 166.0
margin_bottom = 36.0

[node name="Start" type="Button" parent="Menus/MainMenu/MainContainer/CenteredButtons/Lines/CenteredStart"]
margin_left = 29.0
margin_right = 137.0
margin_bottom = 36.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Start"
flat = true

[node name="CenteredSettings" type="CenterContainer" parent="Menus/MainMenu/MainContainer/CenteredButtons/Lines"]
margin_top = 76.0
margin_right = 166.0
margin_bottom = 112.0

[node name="Settings" type="Button" parent="Menus/MainMenu/MainContainer/CenteredButtons/Lines/CenteredSettings"]
margin_right = 166.0
margin_bottom = 36.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Settings"
flat = true

[node name="CenteredQuit" type="CenterContainer" parent="Menus/MainMenu/MainContainer/CenteredButtons/Lines"]
margin_top = 152.0
margin_right = 166.0
margin_bottom = 188.0

[node name="Quit" type="Button" parent="Menus/MainMenu/MainContainer/CenteredButtons/Lines/CenteredQuit"]
margin_left = 39.0
margin_right = 127.0
margin_bottom = 36.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Quit"
flat = true

[node name="TweenButtons" type="Tween" parent="Menus/MainMenu/MainContainer/CenteredButtons"]

[node name="Tween" type="Tween" parent="Menus/MainMenu"]

[node name="DifficultyMenu" type="Node2D" parent="Menus"]
position = Vector2( 480, 0 )
script = ExtResource( 3 )

[node name="MainContainer" type="VBoxContainer" parent="Menus/DifficultyMenu"]
margin_left = 50.0
margin_top = 149.0
margin_right = 454.0
margin_bottom = 571.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenteredTitle" type="CenterContainer" parent="Menus/DifficultyMenu/MainContainer"]
margin_right = 404.0
margin_bottom = 38.0

[node name="Title" type="Label" parent="Menus/DifficultyMenu/MainContainer/CenteredTitle"]
margin_right = 404.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
text = "Choose difficulty"

[node name="TweenTitle" type="Tween" parent="Menus/DifficultyMenu/MainContainer/CenteredTitle"]

[node name="CenteredButtons" type="CenterContainer" parent="Menus/DifficultyMenu/MainContainer"]
margin_top = 138.0
margin_right = 404.0
margin_bottom = 326.0

[node name="Lines" type="VBoxContainer" parent="Menus/DifficultyMenu/MainContainer/CenteredButtons"]
margin_left = 137.0
margin_right = 267.0
margin_bottom = 188.0
custom_constants/separation = 40

[node name="CenteredStart" type="CenterContainer" parent="Menus/DifficultyMenu/MainContainer/CenteredButtons/Lines"]
margin_right = 130.0
margin_bottom = 36.0

[node name="Easy" type="Button" parent="Menus/DifficultyMenu/MainContainer/CenteredButtons/Lines/CenteredStart"]
margin_left = 20.0
margin_right = 110.0
margin_bottom = 36.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Easy"
flat = true

[node name="CenteredSettings" type="CenterContainer" parent="Menus/DifficultyMenu/MainContainer/CenteredButtons/Lines"]
margin_top = 76.0
margin_right = 130.0
margin_bottom = 112.0

[node name="Medium" type="Button" parent="Menus/DifficultyMenu/MainContainer/CenteredButtons/Lines/CenteredSettings"]
margin_right = 130.0
margin_bottom = 36.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Medium"
flat = true

[node name="CenteredQuit" type="CenterContainer" parent="Menus/DifficultyMenu/MainContainer/CenteredButtons/Lines"]
margin_top = 152.0
margin_right = 130.0
margin_bottom = 188.0

[node name="Hard" type="Button" parent="Menus/DifficultyMenu/MainContainer/CenteredButtons/Lines/CenteredQuit"]
margin_left = 19.0
margin_right = 111.0
margin_bottom = 36.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Hard"
flat = true

[node name="TweenButtons" type="Tween" parent="Menus/DifficultyMenu/MainContainer/CenteredButtons"]

[node name="CenteredReturn" type="CenterContainer" parent="Menus/DifficultyMenu/MainContainer"]
margin_top = 426.0
margin_right = 404.0
margin_bottom = 462.0

[node name="Return" type="Button" parent="Menus/DifficultyMenu/MainContainer/CenteredReturn"]
margin_left = 134.0
margin_right = 269.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "<< Back"
flat = true

[node name="TweenReturn" type="Tween" parent="Menus/DifficultyMenu/MainContainer/CenteredReturn"]

[node name="Tween" type="Tween" parent="Menus/DifficultyMenu"]

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="Menus/MainMenu/MainContainer/CenteredButtons/Lines/CenteredStart/Start" to="Menus" method="_on_Start_pressed"]
[connection signal="pressed" from="Menus/MainMenu/MainContainer/CenteredButtons/Lines/CenteredQuit/Quit" to="Menus" method="_on_Quit_pressed"]
[connection signal="pressed" from="Menus/DifficultyMenu/MainContainer/CenteredButtons/Lines/CenteredStart/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Menus/DifficultyMenu/MainContainer/CenteredButtons/Lines/CenteredStart/Easy" to="Menus" method="_on_Easy_pressed"]
[connection signal="pressed" from="Menus/DifficultyMenu/MainContainer/CenteredButtons/Lines/CenteredSettings/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="Menus/DifficultyMenu/MainContainer/CenteredButtons/Lines/CenteredSettings/Medium" to="Menus" method="_on_Medium_pressed"]
[connection signal="pressed" from="Menus/DifficultyMenu/MainContainer/CenteredButtons/Lines/CenteredQuit/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="Menus/DifficultyMenu/MainContainer/CenteredButtons/Lines/CenteredQuit/Hard" to="Menus" method="_on_Hard_pressed"]
[connection signal="pressed" from="Menus/DifficultyMenu/MainContainer/CenteredReturn/Return" to="Menus" method="_on_Return_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
